# qtupdater

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: DeployQt.cmake
dev_server/: main.py  server.py
examples/basic/: CMakeLists.txt  main.cpp
examples/dev_server/: main.py  server.py
examples/dev_server/public/: v1.1.0.json  v1.1.0.md
examples/qtwidgets/: CMakeLists.txt  QtUpdateWidget.cpp  main.cpp  resources.qrc
lib/: CMakeLists.txt
lib/include/oclero/: QtDownloader.hpp  QtUpdateController.hpp  QtUpdateWidget.hpp  QtUpdater.hpp
lib/src/oclero/: DeleteLaterScopedPointer.hpp  QtDownloader.cpp  QtUpdateController.cpp  QtUpdateWidget.cpp  QtUpdater.cpp  SettingsUtils.cpp  SettingsUtils.hpp
lib/src/oclero/utils/: EnumUtils.hpp  SettingsUtils.cpp
scripts/: configure-msvc.sh  install-deps-msvc.sh
src/: CMakeLists.txt
src/include/oclero/: QtUpdateController.hpp
src/source/oclero/: QtDownloader.cpp  QtUpdater.cpp
tests/: CMakeLists.txt
tests/src/: QtUpdaterTests.cpp  QtUpdaterTests.hpp  main.cpp
